--- a/site.css
+++ b/site.css
@@ -1,5 +1,15 @@
 body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
   margin: 0;
+  background-color: black;
+}
+
+.cl-switch--on {
+  background-color: yellow;
 }
 
 img {
@@ -7,7 +17,7 @@ img {
 }
 
 .cl-switch-container {
-  width: 30%;
+  width: 15%;
   margin: auto;
   position: relative;
 }
